add integration tests user-service